force-app/main/default/objects/Disposition__c/Disposition__c.object-meta.xml
<CustomObject>
    <label>Disposition</label>
    <nameField>
        <displayFormat>DISP-{0000}</displayFormat>
        <label>Disposition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dispositions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>