force-app/main/default/objects/Disposition__c/fields/Accepted_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Offer_Price__c</fullName>
    <label>Accepted Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>