force-app/main/default/objects/Disposition__c/fields/Brokers_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Brokers_Contacted__c</fullName>
    <label>Brokers Contacted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>