force-app/main/default/objects/Disposition__c/fields/Closing_Statement_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closing Statement Uploaded</label>
    <type>Checkbox</type>
</CustomField>