force-app/main/default/objects/Disposition__c/fields/Days_On_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Market__c</fullName>
    <formula>IF(ISBLANK(Listing_Date__c), null, TODAY() - Listing_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days on Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>